# chatboard

./: .gitignore  BLOCK_SYSTEM_API.md  CLAUDE.md  README.md  pyproject.toml  setup.py  test_replay.py
__tests__/: completion_parsing_graph_test.py  history_test.py  test_vector_search.py  utils.py  view_renderer_test.py
__tests__/block/: block10_sanity_test.py  block10_storage_test.py  block10_test.py  block_builder_test.py  block_render_test.py  block_sent_test.py  block_serialization_test.py  block_test.py  block_text_test.py  helpers.py  schema_test.py  test_block6.py  test_block7.py
__tests__/integration/: test_span_tree_integration.py
__tests__/model/: test_artifact_model.py  test_model.py  test_model_mutations.py  test_model_ordering.py  test_model_v4.py  test_model_v4_nested.py  test_model_versioning.py  test_query_builders.py  utils.py  vectorizer.py
__tests__/old_tests/: client_test.py  interpreter_test.py  jinja_formatter_test.py  message_test.py  rendering_test.py  test_agent_utils.py  test_artifact_log.py  test_artifact_log2.py  test_block2.py  test_block3.py  test_block4.py  test_block_parser.py  (+6 more)
app/: main.py  main2.py  test_agent.py  test_migration_models.py  test_models.py  user_model.py
chatboard/: README.md  __init__.py
docs/: BLOCK12_FRONTEND_MIGRATION.md  block11_migration_guide.md  block12_prd.md  model.md  session_api.md  user_api.md
examples/: model2_example.py  model2_relation_example.py  model2_repo_example.py  pirate_agent.py  style_example.py
promptview/: __init__.py  app.py  models.py
tools/: migration_generator.py
(+360 files in other folders)
